# 3D-Surface-Anomaly-Detection-on-MVTec-3D-AD

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: autoencoder.yaml  base.yaml  classical.yaml
docs/: data_format.md  decisions.md  implementation_plan.md  interim_report.md  outline.txt  pipeline.md
docs/Project_3D_Informe_nr1/: example.py  main.tex  rho.bib
docs/Project_3D_Informe_nr1/rho-class/: README.md  (+3 more)
fig/: README.md
outputs/logs/: classical_training_summary.json
outputs/metrics/: classical_image_scores_test.csv  classical_per_category.csv  classical_val_patch_scores.csv
scripts/: README.md  infer_classical.py  prepare_data.py  run_benchmark.py  train_autoencoder.py  train_classical.py  visualize_depth_samples.py
src/: README.md  __init__.py
src/data/: __init__.py  dataset_index.py  loaders.py  patching.py  preprocessing.py
src/evaluation/: __init__.py  benchmark.py  metrics.py  visualization.py
src/features/: __init__.py  geometric_features.py  raw_patch_features.py
src/inference/: __init__.py  anomaly_maps.py  autoencoder_inference.py  classical_inference.py
src/models/: __init__.py  autoencoder.py  isolation_forest.py  ocsvm.py
src/training/: __init__.py  autoencoder_trainer.py  classical_trainer.py
src/utils/: __init__.py  config.py  io.py  logging.py  seed.py
tests/: test_anomaly_maps.py  test_classical_inference.py  test_classical_trainer.py  test_dataset_index.py  test_geometric_features.py  test_loaders.py  test_ocsvm.py  test_patching.py  test_preprocessing.py  test_raw_patch_features.py
(+1246 files in other folders)
