[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvtec-3d-ad"
version = "0.1.0"
description = "Shared classical and autoencoder anomaly detection pipeline for MVTec 3D-AD."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Romano Elfken" }
]
dependencies = []

[project.urls]
Repository = "https://github.com/romanoen/Explainable-Surface-Defect-Detection-on-MVTec-AD-INF398"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

